# /Users/vichirajan/Documents/realto/realtoapp/.maestro/ios/add_residential_rent_property.yaml
 appId: com.example.app
---
# REMOVE - runFlow: ../login.yaml if login is handled by test_suite.yaml
- tapOn: "bottom_tab_properties_icon"
- waitForAnimationToEnd 
- assertVisible: "Residential"
- tapOn: "add_property_icon"
- tapOn: "property_type_commercial"
- tapOn: "property_for_sell"
- assertVisible: "Owner Details"
- tapOn: "Name*"
- inputText: "Property 1 Residential Sell"
- hideKeyboard # not wrking on iOS
- waitForAnimationToEnd  
- tapOn:
    text: "return"
    optional: true 
- tapOn: "Mobile*"
- inputText: "1234567890"
- hideKeyboard  
- waitForAnimationToEnd  
- tapOn: "Done"
- tapOn: "Address*"
- inputText: "Juhu, Mumbai"
- hideKeyboard  
- waitForAnimationToEnd
- tapOn:
    text: "return"
    optional: true 
- tapOn: "NEXT"

- assertVisible: "Locality Details"
- tapOn: "City*"
- inputText: "Mumbai"
- tapOn: "Add multiple locations within city"
- inputText: "juhu"
- tapOn: "Juhu Beach, Maharashtra"
- tapOn: "Building Name / Society*"
- inputText: "Sunrise Apartments"
- tapOn: "Street / Landmark*"
- inputText: "Near Juhu Beach"
- tapOn: "NEXT"


- assertVisible: "Property Details"
- assertVisible: "Property Type*"
- tapOn: "commercial_property_type_shop"
- tapOn: "Building Type*"
- tapOn: "commercial_property_building_type_mall"
- tapOn: "Ideal For*(Multi Select)"
- tapOn: "commercial_property_ideal_for_shop"
- tapOn: "commercial_property_ideal_for_restaurant/cafe"
- scrollUntilVisible:
    element:
      text: "NEXT"
    direction: down
- assertVisible: "Parkings"
- tapOn: "commercial_parking_type_public"
- assertVisible: "Power Backup*"
- tapOn: "power_backup_yes"
- tapOn: "Property Size"
- inputText: "1000"
- hideKeyboard  
- waitForAnimationToEnd  
- tapOn: "Done"
- scrollUntilVisible:
    element:
      text: "NEXT"
    direction: down
- tapOn: "NEXT"

- assertVisible: "Sell Details"
- tapOn: "Expected Sell Price*"
- inputText: "25000000"
- tapOn: "Maintenance Charge"
- inputText: "2500"
- tapOn: "Available From *"
- tapOn: " 31 "
- tapOn: "OK"
- assertVisible: "Negotiable*"
- tapOn: "negotiable_option_yes"
- tapOn: "NEXT"

- assertVisible: "Add Images"
- assertVisible: "ADD PHOTOS"
- tapOn: "ADD PHOTOS"
- tapOn: "Photo, 31 March 2018, 12:44 AM"
- waitForAnimationToEnd  
- tapOn: "NEXT"

- waitForAnimationToEnd  
- assertVisible: "Final Details"
- assertVisible: ".*Shop For Sell In Sunrise Apartments.*"
- assertVisible: ".*Near Juhu Beach,Juhu Beach, Maharashtra, India.*"

- assertVisible: "Details"
- assertVisible: "Mall"
- assertVisible: "6-10"
- assertVisible: "Ideal For"
- assertVisible: "Owner"

- scrollUntilVisible:
    element:
      text: "ADD"
    direction: down
- waitForAnimationToEnd
- tapOn: "ADD"

- waitForAnimationToEnd
- tapOn: "Commercial"
- waitForAnimationToEnd
- assertVisible: ".*Sell Off In Sunrise Apartments.*"



